--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <nav class="container mx-auto px-4 lg:px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="#" class="text-2xl font-bold text-blue-600">
-                    <i class="fas fa-shipping-fast mr-2"></i>SwiftCargo
+                    <i class="fas fa-shipping-fast mr-2"></i>Delta Post
                 </a>
                 <div class="hidden lg:flex items-center space-x-8">
                     <a href="#services" class="text-gray-600 hover:text-blue-600 transition duration-300">Services</a>
@@ -107,7 +107,7 @@
                     <div class="bg-gray-50 p-8 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
                         <i class="fas fa-plane-departure text-4xl text-blue-600 mb-4"></i>
                         <h3 class="text-xl font-semibold mb-2">Air Freight</h3>
-                        <p class="text-gray-600">Fast and reliable air cargo services for your time-sensitive shipments.</p>
+                        <p class="text-gray-600">Fast and reliable logistics services for your time-sensitive shipments.</p>
                     </div>
                     <div class="bg-gray-50 p-8 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
                         <i class="fas fa-ship text-4xl text-blue-600 mb-4"></i>
@@ -131,7 +131,7 @@
                          <img src="https://placehold.co/600x400/e0e7ff/374151?text=Our+Team" alt="Our Team" class="rounded-lg shadow-lg">
                     </div>
                     <div class="md:w-1/2">
-                        <h2 class="text-3xl font-bold mb-4">About SwiftCargo</h2>
+                        <h2 class="text-3xl font-bold mb-4">About Delta Post</h2>
                         <p class="text-gray-600 mb-4">With over a decade of experience in the logistics industry, SwiftCargo is your trusted partner for moving goods across the globe. We pride ourselves on our commitment to reliability, transparency, and customer satisfaction.</p>
                         <p class="text-gray-600">Our global network and advanced technology enable us to provide you with real-time tracking and efficient supply chain solutions.</p>
                     </div>
@@ -144,8 +144,8 @@
             <div class="container mx-auto px-4 lg:px-6 text-center">
                 <h2 class="text-3xl font-bold mb-2">Get in Touch</h2>
                 <p class="text-gray-600 mb-8 max-w-2xl mx-auto">Have questions or need a custom quote? Our team is ready to help.</p>
-                <p class="text-lg text-gray-800 font-semibold"><i class="fas fa-envelope mr-2 text-blue-600"></i> contact@swiftcargo.com</p>
-                <p class="text-lg text-gray-800 font-semibold mt-2"><i class="fas fa-phone mr-2 text-blue-600"></i> +1 (234) 567-890</p>
+                <p class="text-lg text-gray-800 font-semibold"><i class="fas fa-envelope mr-2 text-blue-600"></i> contact@deltapost.com</p>
+                <p class="text-lg text-gray-800 font-semibold mt-2"><i class="fas fa-phone mr-2 text-blue-600"></i> +234 (0) 906-2765-519</p>
             </div>
         </section>
 
